--- a/opus_flutter/pubspec.yaml
+++ b/opus_flutter/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   opus_flutter_ios: ^3.0.1
   opus_flutter_windows: ^3.0.0
   opus_flutter_web: ^3.0.3
+  opus_flutter_macos:
+    path: ../opus_flutter_macos
 
 flutter:
   plugin:
@@ -23,6 +25,8 @@ flutter:
         default_package: opus_flutter_android
       ios:
         default_package: opus_flutter_ios
+      macos:
+        default_package: opus_flutter_macos
       windows:
         default_package: opus_flutter_windows
       web:
