--- a/opus_flutter/pubspec.yaml
+++ b/opus_flutter/pubspec.yaml
@@ -11,12 +11,18 @@ dependencies:
   flutter:
     sdk: flutter
   opus_flutter_platform_interface: ^3.0.0
-  opus_flutter_android: ^3.0.1
+  opus_flutter_android:
+    git:
+      url: https://github.com/shingohu/opus_flutter.git
+      path: opus_flutter_android
   opus_flutter_ios: ^3.0.1
   opus_flutter_windows: ^3.0.0
   opus_flutter_web: ^3.0.3
   opus_flutter_macos:
-    path: ../opus_flutter_macos
+    #path: ../opus_flutter_macos
+    git:
+      url:  https://github.com/shingohu/opus_flutter.git
+      path: opus_flutter_macos
 
 flutter:
   plugin:
